# tjmsr

./: LICENSE  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  cr4.c  cr4.h  energy.c  listmsrs.c  main.c  msr.c  msr.h  power.c  rdmsr  tdp.c  throttles.c
src/: Makefile.am  Makefile.in  amd_pstate.c  energy.c  highpower.c  intel_rapl.c  lowpower.c  medpower.c  msr.c  msr.h  test.c  throttles.c  undervolt.c
